Refresh page every 5 seconds

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,16 +15,11 @@
     </form>
     <div id="results">
       <h2>Results</h2>
-      <h3 id="busStopOne">Example stop 1</h3>
-      <ul id="busStopOneResults">
-        <li>2 minutes: 123 to Example Street</li>
-        <li>3 minutes: 456 to Fantasy Land</li>
-      </ul>
-      <h3 id="busStopTwo">Example stop 2</h3>
-      <ul id="busStopTwoResults">
-        <li>1 minute: 123 to Example Street</li>
-        <li>4 minutes: 456 to Fantasy Land</li>
-      </ul>
+      <h3 id="busStopOne"></h3>
+      <ul id="busStopOneResults"></ul>
+      <h3 id="busStopTwo"></h3>
+      <ul id="busStopTwoResults"></ul>
     </div>
+    <a href="history.html">History</a>
   </body>
 </html>
